# Nanite

./: key  key.pub
Bot/: Com_MySQL_001.py  Create_Table.mq5  MyConnection.ini  Nanite_MetaTrader5.mq5  Working_SVM_rev05.py  Working_SVM_rev06.py  Working_SVM_rev07.py  readme.txt
Bot/dataset/: HistoryData.csv
Bot/lib/: MQLMySQL.mqh  SQL_CONF.mqh  readme.txt
MQL5/: LINK_MQL_DATA.lnk
MQL5/get_history_data/: SQL_CONF.mqh  SmartBot.ex5  SmartBot.mq5  Test001.mq5
MQL5/test001/: SmartBot.ex5  SmartBot.mq5
Octave/: create_subsets.m  nnCostFunction_HL3.m  run.m
Octave/calculate_NN/: FeatureSort.m  MACD02.csv  ex3_nn.m  ex4.m  nnCostFunction.m  randInitializeWeights.m  test.m
Octave/db_access/: octave-database.metainfo.xml
Octave/db_access/src/: Makefile.in  __pq_internal_exit__.cc  bytea2var.cc  configure  configure.ac  converters.cc  converters.h  converters_arr_comp.cc  pq_connection.cc  var2bytea.cc
Octave/working_dir/: create_subsets.m  nnCostFunction.m  nnCostFunction_HL3.m  run.m
